# pocket-flow-playground

./: AGENTS.md  AI_COMPANION_PLAN.md  CODE_ANALYSIS.md  COMMITS_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  Makefile  README.md  basic_chat.py  pyproject.toml  server.py  test_audio_flow.py  utils.py  web_ui.py
.github/workflows/: cicd.yml  linting.yml  pylint.yml
experiments/: Makefile
registry/: .env
src/pocket_flow_playground/: __init__.py  __main__.py  audio_flow.py  basic_chat.py  cli.py  client_openai.py  flow.py  logging_config.py  main.py  nodes.py  server.py  server_openai.py  web_ui.py
tests/: test_audio_flow.py  test_audio_input_node.py  test_audio_nodes.py  test_server.py  test_web_ui.py
