[project]
name = "pocket-flow-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "ollama>=0.6.0",
    "openai>=2.8.1",
    "pocketflow>=0.0.3",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.4",
    "ty>=0.0.1a29",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
pocket-flow-playground = "pocket_flow_playground.main:main_cli"
pfp = "pocket_flow_playground.main:main_cli"
